Add Career page and update navigation links across multiple pages

--- a/css/style.css
+++ b/css/style.css
@@ -490,6 +490,10 @@ h5 {
 }
 
 /* =============================
+             career page
+================================= */
+
+/* =============================
              Responsive 
 ================================= */
 @media (max-width: 1199px) {
