--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,11 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box !important;
+  box-sizing: border-box;
 }
 
 body {
-  overflow-x: hidden !important;
+  overflow-x: hidden;
   width: 100%;
   font-family: "Poppins", sans-serif;
   background-color: #ffffff;
