--- a/css/style.css
+++ b/css/style.css
@@ -20,16 +20,6 @@ body {
   background-color: #ffffff;
 }
 
-[data-aos^="fade-left"],
-[data-aos^="fade-right"] {
-  overflow: hidden;
-}
-
-[data-aos] {
-  will-change: transform;
-  backface-visibility: hidden;
-}
-
 /* Fonts */
 .lato {
   font-family: "Lato", sans-serif;
@@ -189,6 +179,7 @@ h5 {
   font-size: 16px;
   position: relative;
   transition: color 0.3s ease;
+  text-decoration: none !important;
 }
 
 .nav-menu ul li a:hover,
